--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="cover">
         <button id="my-blog">My blog</button>
-        <button id="my-cv" onclick="window.open('SIVA PRASAD UMMANENI .pdf'); return true;">My CV</button>
+        <button id="my-cv" onclick="window.open('CV.pdf'); return true;">My CV</button>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
