--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h1>Welcome to My Portfolio</h1>
             <p>Product Manager | R & D Engineer</p>
             <p>I'm <b style="color: #ffffff;">Ummaneni Siva Prasad</b>, passionate about building innovative tech solutions. Let’s create something amazing together!</p>
-            <button onclick="https://siva-1916.github.io/MINE/">My Blog</button>
+            <button onclick="window.open('https://siva-1916.github.io/MINE/')">My Blog</button>
             <button onclick="window.open('CV.pdf')">My CV</button>
         </div>
         </div>
