--- a/index.html
+++ b/index.html
@@ -77,8 +77,12 @@
                 <li>Research Methodology</li>
                 <li>Data Structures</li>
                 <li>Prompt Engineering</li>
-                <li>Cloud Computing</li>
-                <li>IOT</li>
+                <li>Cyber Security</li>
+                <li>Leadership and Teamwork</li>
+                <li>Innovative thinking for real-life problem-solving</li>
+                <li>Project planning and Execution</li>
+                <li>Communication and Presentation</li>
+                <li>Familiar with Linux OS</li>
             </ul>
         </section>
     
