--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
         <section id="credintials">
             <h2>credintials</h2>
             <ul>
-                <li>Research Informatics: A module of research Methodology - MARYAM ABACHA - AMERICAN UNIVERSITY OF NIGERIA<a href=" ">🔗</a></li>
-                <li>AI fundamentals - IBM Skillbuild<a href=" ">🔗</a></li>
-                <li>SQL and Relational Database - IBM<a href=" ">🔗</a></li>
-                <li>Python for Data Science - IBM<a href="">🔗</a></li>
-                <li>Fundamentals Of Cybersecurity - Zscalar<a href=" ">🔗</a></li>
-                <li>Multiprocessing and Multithreading in Python - Sclar<a href=" ">🔗</a></li>
-                <li>Programming in Python - NPTEL<a href=" ">🔗</a></li>
-                <li>Basics of Python Programming - Open weaver<a href=" ">🔗</a></li>
+                <li>Research Informatics: A module of research Methodology - MARYAM ABACHA - AMERICAN UNIVERSITY OF NIGERIA</li>
+                <li>AI fundamentals - IBM Skillbuild</li>
+                <li>SQL and Relational Database - IBM</li>
+                <li>Python for Data Science - IBM</li>
+                <li>Fundamentals Of Cybersecurity - Zscalar</li>
+                <li>Multiprocessing and Multithreading in Python - Sclar</li>
+                <li>Programming in Python - NPTEL</li>
+                <li>Basics of Python Programming - Open weaver</li>
 
             </ul>
         </section>
